# federation-playground

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  lefthook.yml  wrangler.jsonc
.cargo/: config.toml
.claude/: settings.json
.claude/workflows/: ralph-backlog-loop.js
.github/workflows/: ci.yml  deploy.yml
.pi/: settings.json  subagents.json
.pi/agents/: algorithms-researcher.md  architect.md  cognitive-scientist.md  committer.md  developer.md  distributed-systems-expert.md  performance-analyzer.md  pr-reviewer.md  researcher.md  reviewer.md  scout.md  test-designer.md
.pi/chains/: algorithm-spike.chain.md  cognitive-refactor.chain.md  deep-review.chain.md  distributed-design.chain.md  full-feature.chain.md  performance-fix.chain.md  plan-and-implement.chain.md
.pi/prompts/: backlog-workflow-auto.md  (+2 more)
backlog/: config.yml
crates/gql-core/: Cargo.toml
crates/gql-core/src/: api_schema.rs  compose.rs  dto.rs  lib.rs  mock.rs  node_at_pos.rs  plan.rs  validate.rs
crates/gql-core/tests/: cargo_toml_audit.rs  mock.rs  wasm.rs
crates/gql-core/tests/snapshots/: compose__three_subgraphs_users_posts_and_comments.snap  compose__two_subgraphs_independent_users_and_posts.snap  compose__two_subgraphs_sharing_entity_via_key.snap  mock__determinism_same_seed_identical_output.snap
functions/: tsconfig.json
scripts/: backlog-loop.sh
tests/: test_cargo_audit.py  test_task6_build_wasm.py
web/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts  vitest-env.d.ts
(+235 files in other folders)
