[package]
name = "gql-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM GraphQL core: validate, compose, plan, mock-execute"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
# cdylib: the wasm artifact for the browser. rlib: so native `cargo test` can
# unit-test the internal modules directly.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

# --- Apollo GraphQL ---------------------------------------------------------
# Pinned EXACT. apollo-federation has NO semver guarantees (Apollo treats it as
# Router-internal), so any version may break the API.
apollo-compiler = "=1.32.0"
apollo-federation = "=2.15.1"
# The usual wasm fix when a transitive dep needs randomness:
# enable getrandom's wasm_js feature for wasm builds.
# Required for apollo-federation which pulls in getrandom v0.3.
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
insta = { version = "1", features = ["json"] }
